--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,7 @@ dependencies {
     compile 'com.ibm.watson.developer_cloud:visual-recognition:4.0.0'
     compile 'com.ibm.watson.developer_cloud:android-sdk:0.4.2'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.google.firebase:firebase-database:11.6.0'
+    compile 'com.google.firebase:firebase-auth:11.6.0'
     testCompile 'junit:junit:4.12'
 }
